# servo-fetch

./: .rustfmt.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  cliff.toml  release-plz.toml
.cargo/: config.toml
.github/: dependabot.yml  labels.yml  pull_request_template.md
.github/workflows/: benchmarks-ci.yml  ci.yml  lint-workflows.yml  release-npm.yml  release-plz.yml  release-python.yml  release.yml  skills.yml  sync-labels.yml  test-smoke.yml
benchmarks/src/servo_fetch_bench/: cli.py  runners.py
bindings/node/: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  biome.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsdown.config.ts  vitest.config.ts
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: binary.test.ts  binary.ts  errors.test.ts  errors.ts  index.ts  schema.test.ts  schema.ts  spawn.ts  types.ts
bindings/node/test/: e2e.test.ts
bindings/node/test/fixtures/: servo-fetch.mjs
bindings/node/test/helpers/: fake-binary.ts
bindings/node/test/integration/: crawl.test.ts  errors.test.ts  extract.test.ts  fetch.test.ts  page.test.ts  version.test.ts
bindings/python/examples/: strands_agent.py
bindings/python/src/: client.rs  crawl.rs  errors.rs
crates/servo-fetch/: README.md
crates/servo-fetch-cli/: Cargo.toml  README.md
crates/servo-fetch-cli/src/: cli.rs  commands.rs  exit.rs  logging.rs  main.rs  mcp.rs  output.rs  progress.rs  rpc.rs  serve.rs  tools.rs
crates/servo-fetch-cli/src/commands/: crawl.rs  fetch.rs  healthcheck.rs
crates/servo-fetch-cli/src/mcp/: server.rs  tools.rs
crates/servo-fetch-cli/src/rpc/: dispatch.rs  protocol.rs
crates/servo-fetch-cli/src/serve/: error.rs  handlers.rs
crates/servo-fetch-cli/src/tools/: common.rs  crawl.rs  error.rs  fetch.rs  map.rs  render.rs
crates/servo-fetch-cli/tests/: cli.rs  mcp.rs  rpc.rs
crates/servo-fetch-types/: Cargo.toml
crates/servo-fetch-types/src/: lib.rs  request.rs  wire.rs
crates/servo-fetch/src/: bridge.rs  client.rs  crawl.rs  error.rs  extract.rs  fetch.rs  lib.rs  map.rs  net.rs  pdf.rs  robots.rs  sanitize.rs  schema.rs  screenshot.rs  visibility.rs
crates/servo-fetch/src/blocking/: client.rs
crates/servo-fetch/src/sys/: macos.rs
crates/servo-fetch/src/visibility/: a11y.rs
skills/servo-fetch/: SKILL.md
skills/servo-fetch/references/: guide.md
