[workspace]
members = ["crates/*", "bindings/*"]
default-members = ["crates/servo-fetch-cli"]
resolver = "3"

[workspace.package]
version = "0.11.1"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.86.0"
repository = "https://github.com/konippi/servo-fetch"
homepage = "https://github.com/konippi/servo-fetch"

[workspace.dependencies]
servo-fetch = { path = "crates/servo-fetch", version = "0.11.1" }
servo = { version = "0.1.0", default-features = false, features = ["baked-in-resources", "js_jit"] }
anyhow = "1"
base64 = "0.22"
bitflags = "2"
cssparser = "0.36"
dom_query = "0.26"
dom_smoothie = "0.16"
dpi = "0.1"
euclid = "0.22"
globset = "0.4"
htmd = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
pdf-extract = "0.10"
psl = "2"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
url = "2"
ureq = { version = "3", default-features = false, features = ["gzip", "rustls-no-provider", "rustls-webpki-roots"] }
quick-xml = "0.40"
flate2 = "1"
humantime = "2"
wiremock = "0.6"

[workspace.lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = { level = "allow", priority = 1 }
implicit_clone = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
use_self = "warn"
missing_assert_message = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = "symbols"
debug = "line-tables-only"

[profile.ci]
inherits = "test"
debug = 0
strip = "debuginfo"
incremental = false

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
lto = "thin"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 1
