[workspace]
members = ["crates/*", "bindings/*"]
exclude = ["bindings/node"]
default-members = ["crates/servo-fetch-cli"]
resolver = "3"

[workspace.package]
version = "0.12.2"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.86.0"
repository = "https://github.com/konippi/servo-fetch"
homepage = "https://github.com/konippi/servo-fetch"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
axum = "0.8"
base64 = "0.22"
bitflags = "2"
clap = { version = "4", features = ["derive"] }
cookie = "0.18"
cssparser = "0.36"
dom_query = "0.27"
dom_smoothie = "0.17"
dpi = "0.1"
euclid = "0.22"
flate2 = "1"
futures-util = "0.3"
globset = "0.4"
htmd = "0.5"
humantime = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2"
pdf-extract = "0.10"
predicates = "3"
psl = "2"
quick-xml = "0.40"
rmcp = { version = "1", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
servo = { version = "0.1.1", default-features = false, features = ["baked-in-resources", "js_jit"] }
servo-fetch = { path = "crates/servo-fetch", version = "0.12.0" }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
ureq = { version = "3", default-features = false, features = ["gzip", "rustls-no-provider", "rustls-webpki-roots"] }
url = "2"
wiremock = "0.6"

[workspace.lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = { level = "allow", priority = 1 }
implicit_clone = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
use_self = "warn"
missing_assert_message = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = "symbols"
debug = "line-tables-only"

[profile.ci]
inherits = "test"
debug = 0
strip = "debuginfo"
incremental = false

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
lto = "thin"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 1
