[package]
name = "servo-fetch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A browser engine in a binary — fetch, render, and extract web content as Markdown, JSON, or screenshots. Powered by Servo."
readme = "README.md"
keywords = ["servo", "headless-browser", "fetch", "mcp", "cli"]
categories = ["command-line-utilities", "web-programming"]
include = ["src/**/*", "Cargo.toml", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]
autotests = false

[[bin]]
name = "servo-fetch"
path = "src/main.rs"

[[test]]
name = "cli"
path = "tests/cli.rs"

[[test]]
name = "mcp"
path = "tests/mcp.rs"

[[test]]
name = "parallel"
path = "tests/parallel.rs"

[dependencies]
servo-fetch = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
axum = "0.8"
base64 = { workspace = true }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
rmcp = { version = "1", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
rustls = { workspace = true }
schemars = "1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
url = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rmcp = { version = "1", features = ["client", "transport-io", "transport-child-process"] }
futures-util = "0.3"
tempfile = "3"
wiremock = { workspace = true }

[lints]
workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/servo-fetch-v{ version }-{ target }{ archive-suffix }"
bin-dir = "servo-fetch-v{ version }-{ target }/{ bin }{ binary-ext }"
disabled-strategies = ["quick-install", "compile"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
